Fix data-tooltip align

--- a/src/css/_utils.css
+++ b/src/css/_utils.css
@@ -4,8 +4,6 @@
 
 [data-tooltip] {
   position: relative;
-  cursor: pointer;
-  text-align: center;
 }
 
 [data-tooltip]::before,
